<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="app_name">Proverbica</string>
    <string name="delete">Delete</string>
    <string name="failed_to_load_proverb">Failed to load proverb</string>
    <string name="favourites">Favourites</string>
    <string name="info">Info</string>
    <string name="info_about">About</string>
    <string name="info_about_key">info_about</string>
    <string name="info_version">Version</string>
    <string name="info_version_key">info_version</string>
    <string name="info_connect">Connect</string>
    <string name="info_connect_key">info_connect</string>
    <string name="info_visit_website">Visit Proverbica online…</string>
    <string name="info_visit_website_key">info_visit_website</string>
    <string name="info_twitter_follow">Follow Proverbica on Twitter…</string>
    <string name="info_twitter_follow_key">info_twitter</string>
    <string name="info_facebook_like">Like Proverbica on Facebook…</string>
    <string name="info_facebook_like_key">info_facebook</string>
    <string name="loading_proverb">Loading proverb…</string>
    <string name="no_favourites">No favourites added.\nTo add a proverb to your favourites, tap the bottom right hand corner of the screen.</string>
    <string name="pause_slideshow">Pause slideshow</string>
    <string name="play_slideshow">Play slideshow</string>
    <string name="pref_always_file">Always load proverbs from file</string>
    <string name="pref_always_file_key">pref_always_file</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_keep_screen_on_key">pref_keep_screen_on</string>
    <string name="pref_shake_for_next_proverb">Shake for next proverb</string>
    <string name="pref_shake_for_next_proverb_key">pref_shake_for_next_proverb</string>
    <string name="remove_from_favourites">Remove from favourites</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="widget_instructions">• Tap widget text to see next proverb.\n• Tap widget image to launch main app</string>
    <string name="widget_loading">Widget loading…</string>
</resources>